<resources>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_in_to_your_cards_account">Log in to your Cards Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="skip">Skip</string>
    <string name="dont_have_an_account">Don`t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>

    <string name="confirm_your_phone">Confirm your phone</string>
    <string name="we_have_sent_you_a_confirmation_code">We have sent you a confirmation code</string>
    <string name="code">Code</string>
    <string name="send_code">Send code</string>
    <string name="not_received_the_code_we_can_resend_it">Not received the code? We can resend it!</string>
    <string name="confirm">Confirm</string>
    <string name="you_can">You can </string>
    <string name="the_confirmation_but_then"> the confirmation, but then</string>
    <string name="your_cards_will_be_limited">your Cards will be limited</string>
    <string name="set_up_your_cards_account">Set up your Cards account</string>
    <string name="terms_and_conditions"> <a href="https://yandex.ru">Terms and conditions</a></string>

    <string name="body_footer_condition_and_terms">
        By creating an account, you accept our\n
        <b><a href="https://www.yandex.ru/">Terms and Conditions</a></b>
        you read our
        <b><a href="https://www.yandex.ru/">Privacy Policy</a></b>
    </string>
    <string name="sign_up_title">Sign Up</string>
    <string name="or_better_yet">Or better yet…</string>
    <string name="continue_with_yandex_id">Continue with Yandex ID</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="btn_login">Login</string>
</resources>