<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_100"
    android:paddingHorizontal="16dp"
    tools:context=".SignUpConfirmFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo_100"
        android:tint="@color/primary_700"
        app:layout_constraintEnd_toStartOf="@id/tvAppName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_extra_bold"
        android:gravity="center"
        android:letterSpacing="-0.05"
        android:text="@string/app_name"
        android:textColor="@color/primary_700"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        app:lineHeight="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeaderConfirmPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_your_phone"
        android:textAppearance="@style/TextAppearance.Pasha.HeadlineMedium"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/we_have_sent_you_a_confirmation_code"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_600"
        app:layout_constraintEnd_toEndOf="@id/tvHeaderConfirmPhone"
        app:layout_constraintStart_toStartOf="@id/tvHeaderConfirmPhone"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderConfirmPhone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <FrameLayout
        android:id="@+id/containerCodeVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glAuthBlock">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Pasha.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/code"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Pasha.Button.TextButton"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:paddingRight="16dp"
            android:text="@string/send_code"
            android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
            android:textColor="@color/primary_500"
            app:rippleColor="@android:color/transparent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="24dp"
            android:indeterminate="true"
            app:indicatorColor="@color/primary_500" />

    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBodyCodeTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/not_received_the_code_we_can_resend_it"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_500"
        app:layout_constraintStart_toStartOf="@id/containerCodeVerification"
        app:layout_constraintTop_toBottomOf="@id/containerCodeVerification" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Pasha.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="24dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@id/containerCodeVerification"
        app:layout_constraintStart_toStartOf="@id/containerCodeVerification"
        app:layout_constraintTop_toBottomOf="@id/tvBodyCodeTips" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_600"
        app:layout_constraintBottom_toBottomOf="@id/btnSkip"
        app:layout_constraintEnd_toStartOf="@id/btnSkip"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSkip" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        style="@style/Widget.Pasha.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp"
        android:paddingVertical="0dp"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.Pasha.LinkMedium"
        app:layout_constraintBottom_toTopOf="@id/tvPart3"
        app:layout_constraintEnd_toStartOf="@id/tvPart2"
        app:layout_constraintStart_toEndOf="@id/tvPart1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_confirmation_but_then"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_600"
        app:layout_constraintBottom_toBottomOf="@id/btnSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSkip"
        app:layout_constraintTop_toTopOf="@id/btnSkip" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/your_cards_will_be_limited"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvPart2"
        app:layout_constraintStart_toStartOf="@id/tvPart1" />


</androidx.constraintlayout.widget.ConstraintLayout>