<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_100"
    android:paddingHorizontal="@dimen/normal_margin"
    tools:context=".api.SignInFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:src="@drawable/ic_logo_100"
        android:tint="@color/primary_700"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/tvAppName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/normal_margin"
        android:fontFamily="@font/inter_extra_bold"
        android:gravity="center"
        android:letterSpacing="-0.05"
        android:text="@string/app_name"
        android:textColor="@color/primary_700"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/ivLogo"
        app:lineHeight="16sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glAuthBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headerWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/low_margin"
        android:text="@string/welcome_back"
        android:textAppearance="@style/TextAppearance.Pasha.HeadlineMedium"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/low_margin"
        android:text="@string/login_in_to_your_cards_account"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        android:textColor="@color/primary_600"
        app:layout_constraintEnd_toEndOf="@id/headerWelcomeBack"
        app:layout_constraintStart_toStartOf="@id/headerWelcomeBack"
        app:layout_constraintTop_toBottomOf="@id/headerWelcomeBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailFieldLayout"
        style="@style/Widget.Pasha.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glAuthBlock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordFieldLayout"
        style="@style/Widget.Pasha.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/low_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/emailFieldLayout"
        app:layout_constraintStart_toStartOf="@id/emailFieldLayout"
        app:layout_constraintTop_toBottomOf="@id/emailFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Pasha.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/passwordFieldLayout"
        app:layout_constraintStart_toStartOf="@id/passwordFieldLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordFieldLayout" />

    <!--com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotPassword"
        style="@style/Widget.Pasha.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.Pasha.LinkMedium"
        app:layout_constraintEnd_toStartOf="@id/btnSkip"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" /-->

    <!--com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        style="@style/Widget.Pasha.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.Pasha.LinkMedium"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toEndOf="@id/btnForgotPassword"
        app:layout_constraintTop_toTopOf="@id/btnForgotPassword" /-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBodySignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textAppearance="@style/TextAppearance.Pasha.BodyMedium.Regular"
        app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
        app:layout_constraintEnd_toStartOf="@id/btnSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSignUp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="@style/Widget.Pasha.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.Pasha.LinkMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBodySignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>